--- a/functions/package.json
+++ b/functions/package.json
@@ -2,6 +2,8 @@
   "name": "functions",
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
+    "lint:fix": "yarn lint --fix",
+    "format": "prettier --config .prettierrc './' --write",
     "build": "tsc",
     "build:watch": "tsc --watch",
     "serve": "npm run build && firebase emulators:start --only functions",
@@ -25,6 +27,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
     "firebase-functions-test": "^0.2.0",
+    "prettier": "2.7.1",
     "typescript": "^4.5.4"
   },
   "private": true
