--- a/functions/package.json
+++ b/functions/package.json
@@ -10,6 +10,7 @@
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
+    "test": "jest --watchAll --verbose=false",
     "logs": "firebase functions:log"
   },
   "engines": {
@@ -17,17 +18,21 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "firebase": "9.10.0",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.0"
   },
   "devDependencies": {
+    "@types/jest": "29.1.1",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
-    "firebase-functions-test": "^0.2.0",
+    "firebase-functions-test": "2.4.0",
+    "jest": "29.1.2",
     "prettier": "2.7.1",
+    "ts-jest": "29.0.3",
     "typescript": "^4.5.4"
   },
   "private": true
